# commandline

./: README.md  codemaster-metadata.json  commandline.py  pyproject.toml  requirements.txt
jadivcli/: __init__.py  __main__.py  cli.py  convert.py  proc.py  registry.py  safemath.py
jadivcli/commands/: __init__.py  files.py  merge.py  misc.py  repo.py  system.py  text.py
