[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jadivcli"
version = "2.0.0"
description = "A modern, shell-style command toolkit for system management and everyday utilities."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "JapySoft TDY", email = "j44soft@gmail.com" }]
keywords = ["cli", "shell", "repl", "system", "utilities"]
dependencies = ["psutil>=5.9"]

[project.optional-dependencies]
# Enables the merge_pdf / merge_png commands. Document inputs additionally
# require LibreOffice ('soffice') from your system package manager.
merge = ["pypdf>=4.0", "Pillow>=9.0", "pymupdf>=1.23"]

[project.urls]
Homepage = "https://github.com/jan-tdy/commandline"

[project.scripts]
jadiv = "jadivcli.cli:main"

[tool.setuptools]
packages = ["jadivcli", "jadivcli.commands"]
py-modules = ["commandline"]
